Fix logo bug on ios (#75)

--- a/src/app/components/Navbar/Navbar.module.scss
+++ b/src/app/components/Navbar/Navbar.module.scss
@@ -1,10 +1,8 @@
 .header {
-  padding-top: 8px;
-  background-color: var(--mantine-color-body);
-}
-
-.inner {
-  padding: 0 24px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 20px;
 }
 
 /*link is for <a> in items*/
@@ -22,12 +20,6 @@
   }
 }
 
-.burgerbutton {
-  position: fixed;
-  right: 0;
-  padding-right: 35px;
-}
-
 .navBar {
   font-size: var(--mantine-font-size-md);
 }
@@ -35,5 +27,3 @@
 .burgerMenu {
   font-size: var(--mantine-font-size-xl);
 }
-
-/*# sourceMappingURL=Navbar.module.css.map */
